Design: 프로필 사진 입력 창 디자인 수정
유저의 프로필 사진 선택 동작을 고려한 input 태그 생성에 의한 디자인 레이아웃 및 스타일 수정

--- a/src/styles/User/UserJoin.module.css
+++ b/src/styles/User/UserJoin.module.css
@@ -38,8 +38,11 @@
   flex-direction: column;
   align-items: center;
 }
-.main_header_img {
+.main_header_label {
   position: relative;
+}
+.main_header_img {
+  display: none;
 }
 .main_img1 {
   width: 10rem;
