--- a/src/styles/Minihome/Header/MinihomeHeader.module.css
+++ b/src/styles/Minihome/Header/MinihomeHeader.module.css
@@ -24,6 +24,7 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  flex-grow: 1;
 }
 .header_user_info {
   height: 100%;
@@ -47,6 +48,7 @@
 .header_bottom {
   display: flex;
   gap: 1rem;
+  width: 50%;
 }
 .header_button {
   width: 100%;
