--- a/src/styles/Minihome/MinihomeReplyItem.module.css
+++ b/src/styles/Minihome/MinihomeReplyItem.module.css
@@ -28,9 +28,39 @@
   background-color: gray;
 }
 .main_reply_content {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
+}
+.main_reply_content_wrapper > p {
   width: 100%;
   background-color: white;
   border-radius: 5px;
   padding: 0.5rem;
   box-sizing: border-box;
+}
+.main_reply_content_wrapper {
+  display: flex;
+  gap: 0.5rem;
+} 
+
+.main_buttons {
+  display: flex;
+  gap: 0.5rem;
+}
+.main_buttons > button {
+  padding: 0.5rem;
+  width: 3rem;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid black;
+  background: linear-gradient(to bottom, #FFFFFF, #FCFF4F);
+  border-radius: 5px;
+  text-decoration: none;
+  color: black;
+  box-shadow: 0 4px 5px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
 }
