--- a/src/styles/Minihome/MinihomeReplyNew.module.css
+++ b/src/styles/Minihome/MinihomeReplyNew.module.css
@@ -2,7 +2,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 2rem;
   overflow: hidden;
 }
 .main_reply_input {
@@ -13,6 +13,7 @@
   box-sizing: border-box;
   border-radius: 5px;
   background-color: white;
+  position: relative;
 }
 .main_reply_input > input {
   height: 100%;
@@ -36,6 +37,13 @@
   color: black;
   box-shadow: 0 4px 5px rgba(0, 0, 0, 0.5);
   cursor: pointer;
+}
+.main_replyError {
+  position: absolute;
+  color: red;
+  font-weight: bold;
+  bottom: -1.5rem;
+
 }
 .main_replyList {
   display: flex;
