--- a/src/styles/Market/MarketItem.module.css
+++ b/src/styles/Market/MarketItem.module.css
@@ -2,9 +2,12 @@
   background-color: white;
   aspect-ratio: 1/1;
   border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .item > img {
-  width: 100%;
-  height: 100%;
+  width: 6rem;
+  height: 6rem;
   border-radius: 10px;
 }
