--- a/src/styles/Market/MarketSellItemList.module.css
+++ b/src/styles/Market/MarketSellItemList.module.css
@@ -49,11 +49,14 @@
   background-color: white;
   width: 100%;
   border-radius: 10px;
-  width: 10rem;
-  height: 10rem;
+  width: 8rem;
+  height: 8rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .main_body > div > img {
-  width: 100%;
-  height: 100%;
+  width: 6rem;
+  height: 6rem;
   border-radius: 10px;
 }
