--- a/src/styles/Minihome/Header/MinihomeItem.module.css
+++ b/src/styles/Minihome/Header/MinihomeItem.module.css
@@ -1,3 +1,21 @@
+.wrapper {
+  aspect-ratio: 1/1;
+  background-color: white;
+  border-radius: 10px;
+  position: relative;
+}
+
+.img {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.img > img {
+  width: 6rem;
+  height: 6rem;
+}
 .item {
   position: absolute;
   top: 0;
