--- a/src/styles/Minihome/Header/MinihomeItem.module.css
+++ b/src/styles/Minihome/Header/MinihomeItem.module.css
@@ -4,7 +4,6 @@
   border-radius: 10px;
   position: relative;
 }
-
 .img {
   width: 100%;
   height: 100%;
@@ -13,8 +12,8 @@
   justify-content: center;
 }
 .img > img {
-  width: 6rem;
-  height: 6rem;
+  width: 100%;
+  height: 100%;
 }
 .item {
   position: absolute;
