Design: 캡슐 뽑기 애니메이션 모달 스타일 구현

--- a/src/styles/Gacha/GachaMain.module.css
+++ b/src/styles/Gacha/GachaMain.module.css
@@ -8,6 +8,9 @@
   align-items: center;
   justify-content: center;
   position: relative;
+  z-index: 10;
+  /* ----------------- */
+  flex-direction: column;
 }
 .wrapper {
   width: 60rem;
@@ -16,6 +19,7 @@
   flex-direction: column;
   gap: 1.5rem;
   align-items: center;
+
 }
 /* ------------------------------------------------------------ */
 .coin {
