--- a/src/styles/Market/MarketMain.module.css
+++ b/src/styles/Market/MarketMain.module.css
@@ -87,8 +87,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  border-bottom: 3px solid white;
 }
-.main_nav > button {
+.button {
   width: 100%;
   height: 2.5rem;
   border: none;
@@ -97,11 +98,22 @@
   font-weight: bold;
   font-size: 1.2rem;
   cursor: pointer;
-  border-bottom: 2px solid white;
+  /* border-bottom: 2px solid white; */
 }
-.main_nav > button:hover {
+.button:hover {
   color: gray;
-  border-bottom: 2px solid gray;
+  /* border-bottom: 2px solid gray; */
+}
+.active_button {
+  width: 100%;
+  height: 2.5rem;
+  border: none;
+  background-color: gray;
+  font-weight: bold;
+  font-size: 1.2rem;
+  cursor: pointer;
+  color: white;
+  border-radius: 10px 10px 0 0;
 }
 .main_items {
   /* box-shadow: inset 0 0 20px red; */
