--- a/src/styles/Minihome/Header/MinihomeItemBook.module.css
+++ b/src/styles/Minihome/Header/MinihomeItemBook.module.css
@@ -47,9 +47,10 @@
   gap: 1rem;
   border-bottom: 3px solid lightgray;
   align-items: end;
-  padding-bottom: 0.5rem;
 }
 .button {
+  width: 100%;
+  height: 100%;
   border: none;
   background: none;
   font-weight: bold;
@@ -61,15 +62,18 @@
   color: gray;
 }
 .active_button {
+  width: 100%;
+  height: 100%;
   border: none;
-  background: none;
+  background-color: gray;
   font-weight: bold;
   font-size: 1rem;
   cursor: pointer;
-  color: gray;
+  color: white;
+  border-radius: 10px 10px 0 0;
 }
 .main_contents {
-  height: 100%;
+  height: 95%;
 }
 .main_contents_wrapper {
   height: 100%;
