--- a/src/styles/Market/Sell/MarketMySellingItem.module.css
+++ b/src/styles/Market/Sell/MarketMySellingItem.module.css
@@ -1,6 +1,6 @@
 .main_items_item {
   /* box-shadow: inset 0 0 20px red; */
-  height: 4rem;
+  height: 3.5rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -22,6 +22,7 @@
   border: 1px solid gray;
   border-radius: 10px;
   background-color: lightgray;
+  object-fit: fill;
   /* box-shadow: inset 0 0 20px red; */
 }
 .main_items_item > p {
