--- a/src/styles/Market/Sell/MarketMySellingList.module.css
+++ b/src/styles/Market/Sell/MarketMySellingList.module.css
@@ -33,27 +33,6 @@
   height: 100%;
   border-radius: 10px;
 }
-.coin {
-  position: absolute;
-  top: 1rem;
-  left: 1rem;
-  width: 8rem;
-  height: 2rem;
-  padding: 1rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: white;
-  border-radius: 10px;
-  font-weight: bold;
-}
-.coin > img {
-  width: 2.5rem;
-  height: 2.5rem;
-}
-.coin > p {
-  font-size: 1.5rem;
-}
 /* ------------------------------------------------------------ */
 .aside {
   /* box-shadow: inset 0 0 20px red; */
@@ -87,6 +66,8 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
 .main_nav {
   display: flex;
@@ -120,11 +101,10 @@
 }
 .main_items {
   /* box-shadow: inset 0 0 20px red; */
+  flex-grow: 1;
   height: 100%;
   padding: 1rem;
   box-sizing: border-box;
-  overflow: scroll;
-  scrollbar-width: none;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -148,8 +128,11 @@
   font-weight: bold;
 }
 .main_items_main {
+  padding-bottom: 1rem;
   font-weight: bold;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+  overflow: scroll;
+  scrollbar-width: none;
 }
