--- a/src/styles/Explore/ExploreItem.module.css
+++ b/src/styles/Explore/ExploreItem.module.css
@@ -29,7 +29,10 @@
   width: 3rem;
   height: 3rem;
   border-radius: 100%;
-  background-color: lightgray;
+  background-color: white;
+  box-shadow:
+    1px 2px 5px rgba(0, 0, 0, 0.3),
+    inset 0 -2px 5px rgba(0, 0, 0, 0.3);
 }
 .main_list > div > button {
   width: 6rem;
