Design: 닫힘 버튼 호버 스타일 적용

--- a/src/styles/Market/Sell/MarketSellingItemModal.module.css
+++ b/src/styles/Market/Sell/MarketSellingItemModal.module.css
@@ -42,6 +42,10 @@
   font-size: 1.5rem;
   background: none;
   border: none;
+  cursor: pointer;
+}
+.button:hover {
+  color: red;
 }
 .contents {
   display: flex;
