--- a/src/styles/Minihome/MiniHomeMain.module.css
+++ b/src/styles/Minihome/MiniHomeMain.module.css
@@ -3,7 +3,7 @@
   min-height: 100vh;
   padding: 2rem 4rem;
   box-sizing: border-box;
-  background: linear-gradient(to bottom, #D8FAFF, #B6CDFF);
+  background: linear-gradient(to bottom, #d8faff, #b6cdff);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -59,4 +59,75 @@
   opacity: 0.4;
   z-index: -30;
   border-radius: 10px;
+}
+
+/* ------------------------------------ */
+.header {
+  width: 100%;
+  position: relative;
+  z-index: 10;
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+.header_profile {
+  width: 40%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.header_profile > img {
+  width: 10rem;
+  height: 10rem;
+  border-radius: 100%;
+  background-color: white;
+  box-shadow:
+    5px 6px 10px rgba(0, 0, 0, 0.3),
+    inset -3px -5px 10px rgba(0, 0, 0, 0.3);
+}
+.header_user {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  flex-grow: 1;
+}
+.header_user_info {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: space-around;
+  gap: 1rem;
+}
+.header_user_name {
+  font-size: 1.7rem;
+  font-weight: bold;
+}
+.header_info {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  font-weight: bold;
+}
+.header_bottom {
+  display: flex;
+  gap: 1rem;
+  width: 50%;
+}
+.header_button {
+  width: 100%;
+  padding: 0.5rem;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid black;
+  background: linear-gradient(to bottom, #ffffff, #fcff4f);
+  border-radius: 5px;
+  text-decoration: none;
+  color: black;
+  box-shadow: 0 4px 5px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
 }
