Design: 프로필 사진 배경색 변경

--- a/src/styles/Minihome/MinihomeReplyItem.module.css
+++ b/src/styles/Minihome/MinihomeReplyItem.module.css
@@ -25,7 +25,7 @@
   width: 2.5rem;
   height: 2.5rem;
   border-radius: 100%;
-  background-color: gray;
+  background-color: white;
 }
 .main_reply_content {
   display: flex;
