--- a/src/styles/Minihome/MinihomeReplyNew.module.css
+++ b/src/styles/Minihome/MinihomeReplyNew.module.css
@@ -2,7 +2,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1rem;
   overflow: hidden;
 }
 .main_reply_input {
@@ -49,6 +49,33 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  overflow: scroll;
-  scrollbar-width: none;
+  height: 100%;
+}
+
+.pageList {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  list-style: none;
+}
+.pageNum {
+  cursor: pointer;
+  font-weight: bolder;
+  padding: 0.3rem;
+  width: 1rem;
+  text-align: center;
+}
+.pageNum:hover {
+  color: white;
+}
+.active_pageNum {
+  color: white;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  font-weight: bolder;
+  padding: 0.5rem;
+  width: 1rem;
+  text-align: center;
+  background-color: gray;
 }
