--- a/src/styles/User/UserLogin.module.css
+++ b/src/styles/User/UserLogin.module.css
@@ -39,6 +39,7 @@
 .main_wrapper {
   display: flex;
   flex-direction: column;
+  gap: 0.2rem;
   align-items: center;
   justify-content: center;
 }
@@ -48,12 +49,15 @@
   border-radius: 10px;
   background: none;
   width: 100%;
+  width: 12rem;
+  height: 3rem;
 }
 .kakao > img {
   cursor: pointer;
-  width: 12rem;
-  height: 3rem;
-  object-fit: contain;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
 }
 .github {
   width: 12rem;
@@ -61,7 +65,7 @@
   background-color: #333;
   color: #fff;
   font-size: 16px;
-  padding: 0.8rem;
+  box-sizing: border-box;
   border: none;
   border-radius: 5px;
   display: flex;
@@ -73,4 +77,12 @@
 .github > img {
   width: 1.3rem;
   height: 1.3rem;
+  aspect-ratio: 1/1;
+}
+.kakao, .github {
+  transition: transform 0.1s ease-in-out;
+}
+.kakao:hover, .github:hover {
+  transform: scale(1.05);
+  border: 2px solid gray;
 }
