--- a/src/styles/Layouts/Header.module.css
+++ b/src/styles/Layouts/Header.module.css
@@ -13,12 +13,8 @@
 }
 .title {
   height: 100%;
-  font-size: 2rem;
-  text-decoration: none;
-  font-weight: bold;
   display: flex;
   align-items: center;
-  color: black;
 }
 .link_wrapper {
   flex-grow: 1;
@@ -33,24 +29,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid black;
+  border: 1px solid #2D2D2D;
   background: linear-gradient(to bottom, #FFFFFF, #FCFF4F);
   border-radius: 5px;
   text-decoration: none;
-  color: black;
+  color: #2D2D2D;
   box-shadow: 0 4px 5px rgba(0, 0, 0, 0.5);
-  font-size: inherit;
-}
-.button {
-  width: 6rem;
-  height: 60%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid black;
-  background: linear-gradient(to bottom, #FFFFFF, #FCFF4F);
-  border-radius: 5px;
-  text-decoration: none;
-  color: black;
-  box-shadow: 0 4px 5px rgba(0, 0, 0, 0.5);
+  font-size: 1rem;
 }
