--- a/src/styles/Explore/ExploreItem.module.css
+++ b/src/styles/Explore/ExploreItem.module.css
@@ -23,7 +23,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-weight: bold;
+  /* font-weight: bold; */
 }
 .main_list > div > img {
   width: 3rem;
@@ -34,7 +34,7 @@
     1px 2px 5px rgba(0, 0, 0, 0.3),
     inset 0 -2px 5px rgba(0, 0, 0, 0.3);
 }
-.main_list > div > button {
+/* .main_list > div > button {
   width: 6rem;
   height: 60%;
   display: flex;
@@ -47,4 +47,4 @@
   color: black;
   box-shadow: 0 4px 5px rgba(0, 0, 0, 0.5);
   cursor: pointer;
-}
+} */
