--- a/src/styles/Explore/ExploreMain.module.css
+++ b/src/styles/Explore/ExploreMain.module.css
@@ -22,9 +22,20 @@
   flex-direction: column;
   gap: 0.5rem;
 }
+.header_wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+.header_title {
+  font-size: 1.5rem;
+}
+
 .header_aside {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   height: 3.5rem;
 }
 .header_aside > select {
@@ -32,6 +43,7 @@
   width: 6rem;
   height: 2rem;
   border-radius: 5px;
+  font-size: 1rem;
 }
 .header_main {
   height: 3rem;
