--- a/src/styles/Gacha/GachaMain.module.css
+++ b/src/styles/Gacha/GachaMain.module.css
@@ -28,14 +28,14 @@
   flex-direction: column;
   gap: 0.5rem;
   align-items: center;
-  color: white;
+  color: #2D2D2D;
   font-weight: bold;
 }
 .header > h1 {
-  font-size: 3rem;
+  font-size: 2.5rem;
 }
 .header > p {
-  font-size: 1.25rem;
+  font-size: 1.125rem;
 }
 
 .main {
