--- a/src/styles/Market/MarketItemModal.module.css
+++ b/src/styles/Market/MarketItemModal.module.css
@@ -37,7 +37,9 @@
   }
 /* ------------------------------------------------------------ */
 .button {
-  margin: 1rem 1rem auto auto ;
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
   width: 2rem;
   font-size: 1.5rem;
   background: none;
@@ -69,10 +71,26 @@
   justify-content: center;
   gap: 1rem;
   font-weight: bold;
+  font-size: 1rem;
 }
-.main > button {
-  margin-left: auto;
-  margin-right: 1rem;
+.main_wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.main_wrapper > p {
+  display: flex;
+  gap: 1rem;
+}
+.main_wrapper > p > span {
+  flex-grow: 1;
+  text-align: center;
+}
+.main_button {
+  position: absolute;
+  bottom: 1rem;
+  right: 1rem;
   width: 5rem;
   height: 2rem;
   display: flex;
