--- a/src/styles/Market/MarketMain.module.css
+++ b/src/styles/Market/MarketMain.module.css
@@ -41,7 +41,7 @@
   gap: 1rem;
   align-items: center;
 }
-.aside_button {
+/* .aside_button {
   width: 10rem;
   height: 3rem;
   display: flex;
@@ -54,7 +54,7 @@
   color: black;
   box-shadow: 0 4px 5px rgba(0, 0, 0, 0.5);
   cursor: pointer;
-}
+} */
 
 .main {
   /* box-shadow: inset 0 0 20px blue; */
@@ -66,7 +66,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border-bottom: 3px solid white;
+  /* border-bottom: 3px solid white; */
 }
 .button {
   width: 100%;
@@ -75,28 +75,31 @@
   background: none;
   color: white;
   font-weight: bold;
-  font-size: 1.2rem;
+  font-size: 1.125rem;
   cursor: pointer;
-  /* border-bottom: 2px solid white; */
+  border-bottom: 3px solid white;
 }
 .button:hover {
-  color: gray;
+  color: #FF7A92;
   /* border-bottom: 2px solid gray; */
 }
 .active_button {
   width: 100%;
   height: 2.5rem;
   border: none;
-  background-color: gray;
+  background: none;
   font-weight: bold;
-  font-size: 1.2rem;
+  font-size: 1.125rem;
   cursor: pointer;
-  color: white;
-  border-radius: 10px 10px 0 0;
+  color: #FF7A92;
+  border-bottom: 3px solid #FF7A92;
+  /* border-radius: 10px 10px 0 0; */
 }
 .main_items {
   /* box-shadow: inset 0 0 20px red; */
   height: 100%;
+  overflow: scroll;
+  scrollbar-width: none;
 }
 .main_items_wrapper {
   display: grid;
@@ -105,6 +108,4 @@
   gap: 0.5rem;
   padding-top: 1rem;
   box-sizing: border-box;
-  overflow: scroll;
-  scrollbar-width: none;
 }
