--- a/src/styles/Market/Enroll/MarketEnrollPreview.module.css
+++ b/src/styles/Market/Enroll/MarketEnrollPreview.module.css
@@ -13,15 +13,15 @@
 }
 .header_image {
   position: relative;
-  width: 50%;
+  aspect-ratio: 1/1;
   padding: 2rem;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 .header_image > img {
-  width: 80%;
-  height: 80%;
+  width: 15rem;
+  height: 15rem;
   background-color: gray;
   border-radius: 10px;
   object-fit: contain;
@@ -29,7 +29,7 @@
 
 .header_item {
   position: relative;
-  width: 50%;
+  width: 100%;
   padding: 2rem;
   display: flex;
   flex-direction: column;
@@ -67,7 +67,7 @@
   flex-grow: 1;
   text-align: center;
 }
-.header_button {
+/* .header_button {
   width: 50%;
   height: 3rem;
   display: flex;
@@ -80,5 +80,5 @@
   color: black;
   box-shadow: 0 4px 5px rgba(0, 0, 0, 0.5);
   cursor: pointer;
-}
+} */
 
