--- a/src/styles/Market/Sell/MarketMySellingList.module.css
+++ b/src/styles/Market/Sell/MarketMySellingList.module.css
@@ -42,7 +42,7 @@
   align-items: center;
   justify-content: space-between;
 }
-.aside_button {
+/* .aside_button {
   width: 10rem;
   height: 3rem;
   display: flex;
@@ -55,10 +55,10 @@
   color: black;
   box-shadow: 0 4px 5px rgba(0, 0, 0, 0.5);
   cursor: pointer;
-}
+} */
 .aside_filter {
   height: 60%;
-
+  font-size: 1rem;
 }
 
 .main {
@@ -83,21 +83,22 @@
   font-weight: bold;
   font-size: 1.2rem;
   cursor: pointer;
-  border-bottom: 2px solid white;
+  border-bottom: 3px solid white;
 }
 .button:hover {
-  color: gray;
+  color: #FF7A92;
 }
 .active_button {
   width: 100%;
   height: 2.5rem;
   border: none;
-  background-color: gray;
+  background: none;
   font-weight: bold;
   font-size: 1.2rem;
   cursor: pointer;
-  color: white;
-  border-radius: 10px 10px 0 0;
+  color: #FF7A92;
+  border-bottom: 3px solid #FF7A92;
+  /* border-radius: 10px 10px 0 0; */
 }
 .main_items {
   /* box-shadow: inset 0 0 20px red; */
