--- a/src/styles/Minihome/MinihomeReplyNew.module.css
+++ b/src/styles/Minihome/MinihomeReplyNew.module.css
@@ -26,7 +26,8 @@
 .main_reply_input > button {
   padding: 0.5rem;
   width: 5rem;
-  height: 100%;
+  height: 2.5rem;
+  font-size: 1rem;
   display: flex;
   align-items: center;
   justify-content: center;
