--- a/src/styles/Minihome/Adorn/MinihomeAdorn.module.css
+++ b/src/styles/Minihome/Adorn/MinihomeAdorn.module.css
@@ -59,28 +59,32 @@
   overflow: hidden;
 }
 .main_nav {
+  width: 100%;
   display: flex;
   align-items: center;
-  gap: 1rem;
 }
 .button {
-  height: 100%;
+  width: 100%;
+  height: 2.5rem;
   border: none;
   background: none;
   font-weight: bold;
-  color: gray;
-  font-size: 1rem;
+  font-size: 1.125rem;
+  color: white;
   cursor: pointer;
+  border-bottom: 3px solid white;
 }
 .button:hover {
-  color: white;
+  color: #588DFF;
 }
 .active {
-  color: white;
+  width: 100%;
+  height: 2.5rem;
+  color: #588DFF;
   border: none;
   background: none;
   font-weight: bold;
-  font-size: 1rem;
+  font-size: 1.125rem;
   cursor: pointer;
-  border-bottom: 5px soild white;
+  border-bottom: 3px solid #588DFF;
 }
