--- a/src/styles/Minihome/Adorn/MinihomeAdornBackground.module.css
+++ b/src/styles/Minihome/Adorn/MinihomeAdornBackground.module.css
@@ -1,8 +1,8 @@
 .main {
   height: 100%;
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(3, 1fr);  
+  grid-template-columns: repeat(3, 1fr);
+  /* grid-template-rows: repeat(3, 1fr);   */
   gap: 1rem;
   overflow: scroll;
   scrollbar-width: none;
