--- a/src/styles/Minihome/Header/MinihomeItemBook.module.css
+++ b/src/styles/Minihome/Header/MinihomeItemBook.module.css
@@ -20,7 +20,7 @@
   display: flex;
   align-items: center;
 }
-.header_button {
+/* .header_button {
   width: 20%;
   padding: 0.5rem;
   height: 100%;
@@ -34,8 +34,9 @@
   color: black;
   box-shadow: 0 4px 5px rgba(0, 0, 0, 0.5);
   cursor: pointer;
-}
+} */
 .main {
+  width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -44,33 +45,36 @@
 .main_nav {
   height: 5%;
   display: flex;
-  gap: 1rem;
-  border-bottom: 3px solid lightgray;
-  align-items: end;
+  align-items: center;
+  justify-content: space-between;
+  /* align-items: end; */
+  /* border-bottom: 3px solid lightgray; */
 }
 .button {
   width: 100%;
-  height: 100%;
+  height: 2.5rem;
   border: none;
   background: none;
   font-weight: bold;
   color: white;
-  font-size: 1rem;
+  font-size: 1.125rem;
   cursor: pointer;
+  border-bottom: 3px solid white;
 }
 .button:hover {
-  color: gray;
+  color: #588DFF;
 }
 .active_button {
   width: 100%;
-  height: 100%;
+  height: 2.5rem;
   border: none;
-  background-color: gray;
+  background: none;
   font-weight: bold;
-  font-size: 1rem;
+  font-size: 1.125rem;
   cursor: pointer;
-  color: white;
-  border-radius: 10px 10px 0 0;
+  color: #588DFF;
+  border-bottom: 3px solid #588DFF;
+  /* border-radius: 10px 10px 0 0; */
 }
 .main_contents {
   height: 95%;
