--- a/src/styles/Minihome/Header/MinihomeItem.module.css
+++ b/src/styles/Minihome/Header/MinihomeItem.module.css
@@ -1,10 +1,55 @@
-.wrapper {
+.wrapper_S {
   aspect-ratio: 1/1;
-  background-color: white;
+  background: linear-gradient(180deg, #ff00f2, #ff8400, #f4ff58);
+  padding: 1px;
   border-radius: 10px;
   position: relative;
 }
+.wrapper_A {
+  aspect-ratio: 1/1;
+  background-color: #ff63f7;
+  padding: 1px;
+  border-radius: 10px;
+  position: relative;
+}
+.wrapper_B {
+  aspect-ratio: 1/1;
+  background-color: #79ff51;
+  padding: 1px;
+  border-radius: 10px;
+  position: relative;
+}
+.wrapper_C {
+  aspect-ratio: 1/1;
+  background-color: #f4ff58;
+  padding: 1px;
+  border-radius: 10px;
+  position: relative;
+}
+.wrapper_D {
+  aspect-ratio: 1/1;
+  background-color: #eaeaea;
+  padding: 1px;
+  border-radius: 10px;
+  position: relative;
+}
+.wrapper_S::before,
+.wrapper_A::before,
+.wrapper_B::before,
+.wrapper_C::before,
+.wrapper_D::before {
+  content: "";
+  position: absolute;
+  top: 3px;
+  left: 3px;
+  right: 3px;
+  bottom: 3px;
+  background: white;
+  border-radius: 7px;
+}
+/* ------------------------------------ */
 .img {
+  position: absolute;
   width: 100%;
   height: 100%;
   display: flex;
@@ -15,7 +60,29 @@
   width: 100%;
   height: 100%;
 }
-.item {
+
+.disabled {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  opacity: 0.75;
+  z-index: 50;
+  border-radius: 10px;
+}
+.count {
+  position: absolute;
+  bottom: 0.5rem;
+  right: 0.5rem;
+  border: none;
+  padding: 0.1rem 1rem;
+  border-radius: 20px;
+  background-color: lightgray;
+}
+/* --------------------------------------- hover 스타일 제거 */
+/* .item {
   position: absolute;
   top: 0;
   left: 0;
@@ -42,4 +109,4 @@
 }
 .item:hover {
   opacity: 1;
-}
+} */
