Design: 버튼 공용 컴포넌트 사용에 따른 불필요 스타일 코드 삭제

--- a/src/styles/Minihome/Adorn/MinihomeAdorn.module.css
+++ b/src/styles/Minihome/Adorn/MinihomeAdorn.module.css
@@ -21,6 +21,14 @@
   align-items: center;
   justify-content: space-between;
 }
+.aside_wrapper {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.aside_title {
+  font-size: 1.5rem;
+}
 .aside_button, .aside_save {
   width: 20%;
   padding: 0.5rem;
