--- a/src/styles/Market/MarketItem.module.css
+++ b/src/styles/Market/MarketItem.module.css
@@ -5,6 +5,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
+}
+.item:hover {
+  border: 3px solid #FF63F7;
+  transition-duration: 100ms;
 }
 .item > img {
   width: 6rem;
