Design: 헤더 영역 레이아웃 수정

--- a/src/styles/Market/MarketMain.module.css
+++ b/src/styles/Market/MarketMain.module.css
@@ -38,8 +38,17 @@
   /* box-shadow: inset 0 0 20px red; */
   width: 100%;
   display: flex;
-  gap: 1rem;
   align-items: center;
+  justify-content: space-between;
+  gap: 1rem;
+}
+.aside_title {
+  font-size: 1.5rem;
+}
+.aside_wrapper {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
 /* .aside_button {
   width: 10rem;
