Design: 헤더 영역 레이아웃 수정

--- a/src/styles/Market/Sell/MarketMySellingList.module.css
+++ b/src/styles/Market/Sell/MarketMySellingList.module.css
@@ -42,6 +42,14 @@
   align-items: center;
   justify-content: space-between;
 }
+.aside_wrapper {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.aside_title {
+  font-size: 1.5rem;
+}
 /* .aside_button {
   width: 10rem;
   height: 3rem;
