--- a/src/styles/Market/Enroll/MarketEnrollItemList.module.css
+++ b/src/styles/Market/Enroll/MarketEnrollItemList.module.css
@@ -6,6 +6,15 @@
   overflow: hidden;
   height: 100%;
 }
+.header {
+  height: 2.5rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.header_title {
+  font-size: 1.5rem;
+}
 /* .button {
   width: 10rem;
   height: 5rem;
@@ -41,23 +50,10 @@
   height: 100%;
   display: grid;
   grid-template-columns: repeat(5,1fr);
-  grid-template-rows: repeat(2,1fr);
+  grid-template-rows: repeat(5,1fr);
   gap: 1rem;
-  overflow: scroll;
+  overflow-y: scroll;
   scrollbar-width: none;
-}
-.main_body > div {
-  box-sizing: border-box;
-  border-radius: 10px;
-  width: 100%;
-}
-.main_body > div > img {
-  background-color: white;
-  aspect-ratio: 1/1;
-  object-fit: contain;
-  width: 100%;
-  height: 100%;
-  border-radius: 10px;
 }
 
 .pageList {
