--- a/src/styles/Market/Enroll/MarketEnrollPreview.module.css
+++ b/src/styles/Market/Enroll/MarketEnrollPreview.module.css
@@ -1,8 +1,9 @@
 .header {
   position: relative;
   width: 100%;
-  height: 100%;
+  height: 20rem;
   display: flex;
+  border-radius: 10px;
 }
 .header_background {
   position: absolute;
@@ -10,6 +11,7 @@
   height: 100%;
   background-color: white;
   opacity: 0.5;
+  border-radius: 10px;
 }
 .header_image {
   position: relative;
@@ -22,7 +24,7 @@
 .header_image > img {
   width: 15rem;
   height: 15rem;
-  background-color: gray;
+  background-color: white;
   border-radius: 10px;
   object-fit: contain;
 }
@@ -40,16 +42,11 @@
 .header_wrapper {
   width: 100%;
   height: 100%;
-  padding: 2rem;
-  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   align-items: start;
   justify-content: space-between;
-  /* border: 1px solid black; */
   border-radius: 10px;
-  background-color: white;
-  box-shadow: 2px 4px 4px 4px lightgray;
 }
 .header_wrapper > p {
   flex-grow: 1;
@@ -57,9 +54,7 @@
   align-items: center;
   width: 100%;
 }
-.header_wrapper > p:nth-child(1), .header_wrapper > p:nth-child(2) {
-  border-bottom: 1px solid black;
-}
+
 .header_wrapper > p > span {
   width: 20%;
 }
@@ -81,4 +76,43 @@
   box-shadow: 0 4px 5px rgba(0, 0, 0, 0.5);
   cursor: pointer;
 } */
+/* ------------------------------------------- */
+table {
+  display: flex;
+  gap: 1rem;
+  height: 100%;
+  width: 100%;
+}
+thead {
+  width: 20%;
+}
+thead > tr {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: space-around;
+  color: #717171;
+  font-size: 1rem;
+}
+tbody {
+  width: 100%;
+}
+tbody > tr {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: space-around;
+  color: #2D2D2D;
+  font-weight: bold;
+  font-size: 1rem;
+}
 
+.header_Btn {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+}
