--- a/src/styles/Minihome/Adorn/MinihomeAdorn.module.css
+++ b/src/styles/Minihome/Adorn/MinihomeAdorn.module.css
@@ -51,6 +51,7 @@
   height: 100%;
   overflow: hidden;
 }
+
 .header {
   min-height: 30rem;
   width: 100%;
@@ -59,6 +60,24 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
+}
+.header_background {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+.header > div {
+  width: 8rem;
+  height: 8rem;
+  position: absolute;
+  border: none;
+}
+.header > div > img {
+  pointer-events: none;
+  border: none;
 }
 .main {
   display: flex;
