--- a/src/styles/Explore/ExploreMain.module.css
+++ b/src/styles/Explore/ExploreMain.module.css
@@ -13,14 +13,14 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
+  gap: 1rem;
 }
 /* ------------------------------------------------------------ */
 .header {
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
+  gap: 2rem;
 }
 .header_wrapper {
   display: flex;
@@ -36,7 +36,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 3.5rem;
+  /* height: 3.5rem; */
 }
 .header_aside > select {
   margin-left: auto;
@@ -44,6 +44,7 @@
   height: 2rem;
   border-radius: 5px;
   font-size: 1rem;
+  text-align: center;
 }
 .header_main {
   height: 3rem;
@@ -80,7 +81,7 @@
 .main_upperlist {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.5rem;
   list-style: none;
   scrollbar-width: none;
   overflow: scroll;
