--- a/src/styles/Main/MainPage.module.css
+++ b/src/styles/Main/MainPage.module.css
@@ -18,3 +18,15 @@
   flex-direction: column;
   gap: 1.5rem;
 }
+/* ------------------------------------------- */
+.header {
+  width: 100%;
+  height: 30%;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.title {
+  font-size: 3rem;
+}
