--- a/src/styles/Minihome/Header/MinihomeItemBook.module.css
+++ b/src/styles/Minihome/Header/MinihomeItemBook.module.css
@@ -3,10 +3,11 @@
   height: 100vh;
   padding: 2rem 4rem;
   box-sizing: border-box;
-  background: linear-gradient(to bottom, #D8FAFF, #B6CDFF);
+  background: linear-gradient(to bottom, #d8faff, #b6cdff);
   display: flex;
   align-items: center;
   justify-content: center;
+  color: #2d2d2d;
 }
 .wrapper {
   width: 60rem;
@@ -24,35 +25,18 @@
 .header_title {
   font-size: 1.5rem;
 }
-/* .header_button {
-  width: 20%;
-  padding: 0.5rem;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid black;
-  background: linear-gradient(to bottom, #FFFFFF, #FCFF4F);
-  border-radius: 5px;
-  text-decoration: none;
-  color: black;
-  box-shadow: 0 4px 5px rgba(0, 0, 0, 0.5);
-  cursor: pointer;
-} */
 .main {
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
+  gap: 1rem;
   overflow: hidden;
 }
 .main_nav {
-  /* height: 5%; */
   display: flex;
   align-items: center;
   justify-content: space-between;
-  /* align-items: end; */
-  /* border-bottom: 3px solid lightgray; */
 }
 .button {
   width: 100%;
@@ -60,13 +44,13 @@
   border: none;
   background: none;
   font-weight: bold;
-  color: white;
+  color: #545454;
   font-size: 1.125rem;
   cursor: pointer;
   border-bottom: 3px solid white;
 }
 .button:hover {
-  color: #588DFF;
+  color: #588dff;
 }
 .active_button {
   width: 100%;
@@ -76,20 +60,20 @@
   font-weight: bold;
   font-size: 1.125rem;
   cursor: pointer;
-  color: #588DFF;
-  border-bottom: 3px solid #588DFF;
-  /* border-radius: 10px 10px 0 0; */
+  color: #588dff;
+  border-bottom: 3px solid #588dff;
 }
 .main_contents {
-  height: 95%;
+  height: 100%;
+  overflow: scroll;
+  scrollbar-width: none;
 }
 .main_contents_wrapper {
   height: 100%;
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   grid-template-rows: repeat(7, 1fr);
-  gap: 1rem;
-  padding-top: 0.5rem;
+  gap: 0.5rem;
   box-sizing: border-box;
   overflow: scroll;
   scrollbar-width: none;
