--- a/src/styles/Minihome/Header/MinihomeItem.module.css
+++ b/src/styles/Minihome/Header/MinihomeItem.module.css
@@ -81,33 +81,5 @@
   padding: 0.1rem 1rem;
   border-radius: 20px;
   background-color: lightgray;
+  color: #2d2d2d;
 }
-/* --------------------------------------- hover 스타일 제거 */
-/* .item {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  color: white;
-  text-align: center;
-  align-items: center;
-  justify-content: center;
-  background-color: rgba(0, 0, 0, 0.8);
-  opacity: 0;
-  transition: opacity 0.3s ease;
-  border-radius: 10px;
-}
-.item > p:first-child {
-  font-size: 3rem;
-  font-weight: bold;
-}
-.item > p:nth-child(2) {
-  font-size: 0.8rem;
-  font-weight: bold;
-}
-.item:hover {
-  opacity: 1;
-} */
