--- a/src/styles/Minihome/MinihomeReplyItem.module.css
+++ b/src/styles/Minihome/MinihomeReplyItem.module.css
@@ -5,7 +5,7 @@
   padding: 0.5rem;
   box-sizing: border-box;
   border-radius: 5px;
-  background-color: rgb(207, 207, 207);
+  background-color: white;
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -21,11 +21,16 @@
   gap: 0.5rem;
   align-items: center;
 }
+.main_reply_user > p {
+  font-weight: bold;
+}
 .main_reply_user > img {
   width: 2.5rem;
   height: 2.5rem;
   border-radius: 100%;
-  background-color: white;
+  background-color: #999999;
+  padding: 0.2rem;
+  box-sizing: border-box;
 }
 .main_reply_content {
   display: flex;
@@ -33,34 +38,39 @@
   gap: 1rem;
   width: 100%;
 }
-.main_reply_content_wrapper > p {
+.main_reply_content_wrapper {
+  display: flex;
+  gap: 0.5rem;
+}
+.main_bottom {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   width: 100%;
   background-color: white;
   border-radius: 5px;
   padding: 0.5rem;
   box-sizing: border-box;
+  font-size: 1rem;
 }
-.main_reply_content_wrapper {
-  display: flex;
-  gap: 0.5rem;
-} 
-
 .main_buttons {
+  width: 10%;
   display: flex;
   gap: 0.5rem;
 }
-.main_buttons > button {
-  padding: 0.5rem;
-  width: 3rem;
-  height: 100%;
+.main_buttons > p {
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid black;
-  background: linear-gradient(to bottom, #FFFFFF, #FCFF4F);
-  border-radius: 5px;
   text-decoration: none;
-  color: black;
-  box-shadow: 0 4px 5px rgba(0, 0, 0, 0.5);
+  color: #2d2d2d;
   cursor: pointer;
+}
+.main_buttons > p:hover {
+  font-weight: bold;
+  color: gray;
+}
+.main_buttons > p:nth-child(2):hover {
+  color: red;
 }
