--- a/src/styles/Market/MarketMain.module.css
+++ b/src/styles/Market/MarketMain.module.css
@@ -3,11 +3,12 @@
   height: 100vh;
   padding: 2rem 4rem;
   box-sizing: border-box;
-  background: linear-gradient(to bottom, #FFE9E9, #FF9FB1);
+  background: linear-gradient(to bottom, #ffe9e9, #ff9fb1);
   display: flex;
   align-items: center;
   justify-content: center;
   position: relative;
+  color: #2d2d2d;
 }
 .wrapper {
   width: 60rem;
@@ -22,20 +23,7 @@
   z-index: 5;
 }
 /* ------------------------------------------------------------ */
-.background {
-  position: absolute;
-  background-color: white;
-  top: 0;
-  left: 0;
-  opacity: 0.4;
-  z-index: -5;
-  width: 100%;
-  height: 100%;
-  border-radius: 10px;
-}
-
 .aside {
-  /* box-shadow: inset 0 0 20px red; */
   width: 100%;
   display: flex;
   align-items: center;
@@ -50,23 +38,8 @@
   align-items: center;
   gap: 1rem;
 }
-/* .aside_button {
-  width: 10rem;
-  height: 3rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid black;
-  background: linear-gradient(to bottom, #FFFFFF, #FCFF4F);
-  border-radius: 5px;
-  text-decoration: none;
-  color: black;
-  box-shadow: 0 4px 5px rgba(0, 0, 0, 0.5);
-  cursor: pointer;
-} */
 
 .main {
-  /* box-shadow: inset 0 0 20px blue; */
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -75,22 +48,20 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  /* border-bottom: 3px solid white; */
 }
 .button {
   width: 100%;
   height: 2.5rem;
   border: none;
   background: none;
-  color: white;
+  color: #545454;
   font-weight: bold;
   font-size: 1.125rem;
   cursor: pointer;
   border-bottom: 3px solid white;
 }
 .button:hover {
-  color: #FF7A92;
-  /* border-bottom: 2px solid gray; */
+  color: #ff7a92;
 }
 .active_button {
   width: 100%;
@@ -100,12 +71,10 @@
   font-weight: bold;
   font-size: 1.125rem;
   cursor: pointer;
-  color: #FF7A92;
-  border-bottom: 3px solid #FF7A92;
-  /* border-radius: 10px 10px 0 0; */
+  color: #ff7a92;
+  border-bottom: 3px solid #ff7a92;
 }
 .main_items {
-  /* box-shadow: inset 0 0 20px red; */
   height: 100%;
   overflow: scroll;
   scrollbar-width: none;
