--- a/src/styles/Market/MarketItem.module.css
+++ b/src/styles/Market/MarketItem.module.css
@@ -1,4 +1,5 @@
 .item {
+  position: relative;
   background-color: white;
   aspect-ratio: 1/1;
   border-radius: 10px;
@@ -14,5 +15,16 @@
 .item > img {
   width: 6rem;
   height: 6rem;
+  border-radius: 10px;
+}
+/* ---------------------------- */
+.disabled {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: white;
+  opacity: 0.7;
   border-radius: 10px;
 }
