--- a/src/styles/Market/MarketItemModal.module.css
+++ b/src/styles/Market/MarketItemModal.module.css
@@ -11,30 +11,29 @@
   z-index: 10;
   width: 100%;
   height: 100%;
-  opacity: 0.9;
+  opacity: 0.95;
 }
 .wrapper {
   width: 44rem;
   height: 20rem;
   display: flex;
   flex-direction: column;
-  /* box-shadow: inset 0 0 20px red; */
   background-color: white;
   border-radius: 10px;
   position: relative;
   z-index: 10;
 }
-  .background {
-    position: absolute;
-    background-color: white;
-    top: 0;
-    left: 0;
-    opacity: 1;
-    z-index: -1;
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-  }
+.background {
+  position: absolute;
+  background-color: white;
+  top: 0;
+  left: 0;
+  opacity: 1;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+}
 /* ------------------------------------------------------------ */
 .button {
   position: absolute;
@@ -50,7 +49,6 @@
   height: 100%;
 }
 .aside {
-  /* box-shadow: inset 0 0 20px blue; */
   width: 100%;
   display: flex;
   align-items: center;
@@ -63,11 +61,9 @@
   object-fit: cover;
 }
 .main {
-  /* box-shadow: inset 0 0 20px green; */
   width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: start;
   justify-content: center;
   gap: 1rem;
   font-weight: bold;
@@ -87,20 +83,7 @@
   flex-grow: 1;
   text-align: center;
 }
-.main_button {
-  position: absolute;
-  bottom: 1rem;
-  right: 1rem;
-  width: 5rem;
-  height: 2rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid black;
-  background: linear-gradient(to bottom, #FFFFFF, #FCFF4F);
-  border-radius: 5px;
-  text-decoration: none;
-  color: black;
-  box-shadow: 0 4px 5px rgba(0, 0, 0, 0.5);
-  cursor: pointer;
+.main_footer {
+  margin-left: auto;
+  margin-right: 1rem;
 }
