--- a/src/styles/Market/Enroll/MarketEnrollItemList.module.css
+++ b/src/styles/Market/Enroll/MarketEnrollItemList.module.css
@@ -1,10 +1,10 @@
 .itemList {
-  /* box-shadow: inset 0 0 20px red; */
   display: flex;
   flex-direction: column;
   gap: 1rem;
   overflow: hidden;
   height: 100%;
+  color: #2d2d2d;
 }
 .header {
   height: 2.5rem;
@@ -15,21 +15,6 @@
 .header_title {
   font-size: 1.5rem;
 }
-/* .button {
-  width: 10rem;
-  height: 5rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid black;
-  background: linear-gradient(to bottom, #FFFFFF, #FCFF4F);
-  border-radius: 5px;
-  text-decoration: none;
-  color: black;
-  box-shadow: 0 4px 5px rgba(0, 0, 0, 0.5);
-  cursor: pointer;
-  position: relative;
-} */
 .main {
   position: relative;
   width: 100%;
@@ -40,17 +25,14 @@
   overflow: hidden;
 }
 .main_header {
-  /* box-shadow: inset 0 0 20px blue; */
   font-weight: bold;
-  color: white;
   font-size: 1.2rem;
 }
 .main_body {
-  /* box-shadow: inset 0 0 20px red; */
   height: 100%;
   display: grid;
-  grid-template-columns: repeat(5,1fr);
-  grid-template-rows: repeat(5,1fr);
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(7, 1fr);
   gap: 1rem;
   overflow-y: scroll;
   scrollbar-width: none;
