--- a/src/styles/User/UserLogin.module.css
+++ b/src/styles/User/UserLogin.module.css
@@ -26,13 +26,11 @@
 }
 .main {
   border-radius: 10px;
-  width: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  width: 100%;
 }
 .main_wrapper {
-  width: 100%;
+  margin: 0 auto;
+  width: 20rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
