Design: 스크롤 속성 위치 변경

--- a/src/styles/Explore/ExploreMain.module.css
+++ b/src/styles/Explore/ExploreMain.module.css
@@ -77,12 +77,14 @@
 /* -------------------------------------------------------------- */
 .main {
   width: 100%;
+  overflow: scroll;
+  scrollbar-width: none;
 }
 .main_upperlist {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
   list-style: none;
-  scrollbar-width: none;
-  overflow: scroll;
+  /* scrollbar-width: none;
+  overflow: scroll; */
 }
