--- a/src/styles/Minihome/ItemBook/MinihomeItemBook.module.css
+++ b/src/styles/Minihome/ItemBook/MinihomeItemBook.module.css
@@ -14,9 +14,9 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
+  gap: 2rem;
 }
-/* ---------------------------------------------------------- */
+/* ------------------------------------------ */
 .header {
   display: flex;
   align-items: center;
@@ -25,7 +25,8 @@
 .header_title {
   font-size: 1.5rem;
 }
-.main {
+/* ------------------------------------------ */
+.section {
   width: 100%;
   height: 100%;
   display: flex;
@@ -33,11 +34,12 @@
   gap: 1rem;
   overflow: hidden;
 }
-.main_nav {
+.section_nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
+/* --------------------------------------------- */
 .button {
   width: 100%;
   height: 2.5rem;
@@ -63,12 +65,13 @@
   color: #588dff;
   border-bottom: 3px solid #588dff;
 }
-.main_contents {
+/* ------------------------------------------ */
+.section_article {
   height: 100%;
   overflow: scroll;
   scrollbar-width: none;
 }
-.main_contents_wrapper {
+.section_article_section {
   height: 100%;
   display: grid;
   grid-template-columns: repeat(7, 1fr);
