Design: 시멘틱 태그로 변경에 따른 클래스명 변경 및 레이아웃 일부 수정

--- a/src/styles/Minihome/Header/MinihomeFollowing.module.css
+++ b/src/styles/Minihome/Header/MinihomeFollowing.module.css
@@ -35,6 +35,8 @@
 .header_title{
   text-align: center;
   margin: 0 auto;
+  font-size: 1.2rem;
+  font-family: "Pretendard-Bold",sans-serif;
 }
 .header_close {
   position: absolute;
@@ -44,7 +46,8 @@
   border: none;
   background: none;
 }
-.main {
+/* ------------------------------------- */
+.section {
   height: 100%;
   display: flex;
   flex-direction: column;
