--- a/src/styles/Minihome/Header/MinihomeFollower.module.css
+++ b/src/styles/Minihome/Header/MinihomeFollower.module.css
@@ -32,9 +32,11 @@
   height: 3rem;
   border-bottom: 1px solid lightgray;
 }
-.header_title{
+.header_title {
   text-align: center;
   margin: 0 auto;
+  font-size: 1.2rem;
+  font-family: "Pretendard-Bold", sans-serif;
 }
 .header_close {
   position: absolute;
@@ -44,44 +46,11 @@
   border: none;
   background: none;
 }
-.main {
+/* ----------------------------------------- */
+.section {
   height: 100%;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
   padding: 1rem;
-}
-.list {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 0.5rem;
-  padding: 0.5rem;
-  box-sizing: border-box;
-  height: 3rem;
-  /* background-color: gray; */
-}
-.list > div {
-  width: 3rem;
-  height: 3rem;
-  border-radius: 100%;
-  background-color: black;
-}
-.list > p {
-  flex-grow: 1;
-  font-weight: bold;
-}
-.list > button {
-  padding: 0.5rem;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid black;
-  background: linear-gradient(to bottom, #ffffff, #fcff4f);
-  border-radius: 5px;
-  text-decoration: none;
-  color: black;
-  box-shadow: 0 4px 5px rgba(0, 0, 0, 0.5);
-  cursor: pointer;
 }
