--- a/src/styles/Minihome/Header/MinihomeFollowerItem.module.css
+++ b/src/styles/Minihome/Header/MinihomeFollowerItem.module.css
@@ -1,4 +1,4 @@
-.list {
+.article {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -6,36 +6,21 @@
   padding: 0.5rem;
   box-sizing: border-box;
   height: 3rem;
-  /* background-color: gray; */
 }
-.list > div {
+.article_img {
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 100%;
 }
-.list > div > img {
+.article_img > img {
   width: 3rem;
   height: 3rem;
   object-fit: contain;
   border: 1px solid black;
   border-radius: 100%;
 }
-.list > p {
+.article_nickname {
   flex-grow: 1;
   font-weight: bold;
-}
-.list > button {
-  padding: 0.5rem;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid black;
-  background: linear-gradient(to bottom, #ffffff, #fcff4f);
-  border-radius: 5px;
-  text-decoration: none;
-  color: black;
-  box-shadow: 0 4px 5px rgba(0, 0, 0, 0.5);
-  cursor: pointer;
 }
