--- a/src/styles/Minihome/Header/MinihomeFollowingItem.module.css
+++ b/src/styles/Minihome/Header/MinihomeFollowingItem.module.css
@@ -1,4 +1,4 @@
-.list {
+.article {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -7,20 +7,20 @@
   box-sizing: border-box;
   height: 3rem;
 }
-.list > div {
+.article_img {
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 100%;
 }
-.list > div > img {
+.article_img > img {
   width: 3rem;
   height: 3rem;
   object-fit: contain;
   border: 1px solid black;
   border-radius: 100%;
 }
-.list > p {
+.article_nickname {
   flex-grow: 1;
   font-weight: bold;
 }
