--- a/src/styles/Market/Enroll/MarketEnrollItem.module.css
+++ b/src/styles/Market/Enroll/MarketEnrollItem.module.css
@@ -1,4 +1,4 @@
-.item_S {
+.article_S {
   aspect-ratio: 1/1;
   background: linear-gradient(180deg, #ff00f2, #ff8400, #f4ff58);
   padding: 1px;
@@ -6,7 +6,7 @@
   position: relative;
   box-sizing: border-box;
 }
-.item_A {
+.article_A {
   aspect-ratio: 1/1;
   background-color: #ff63f7;
   padding: 1px;
@@ -14,7 +14,7 @@
   position: relative;
   box-sizing: border-box;
 }
-.item_B {
+.article_B {
   aspect-ratio: 1/1;
   background-color: #79ff51;
   padding: 1px;
@@ -22,7 +22,7 @@
   position: relative;
   box-sizing: border-box;
 }
-.item_C {
+.article_C {
   aspect-ratio: 1/1;
   background-color: #f4ff58;
   padding: 1px;
@@ -30,7 +30,7 @@
   position: relative;
   box-sizing: border-box;
 }
-.item_D {
+.article_D {
   aspect-ratio: 1/1;
   background-color: #eaeaea;
   padding: 1px;
@@ -38,11 +38,11 @@
   position: relative;
   box-sizing: border-box;
 }
-.item_S::before,
-.item_A::before,
-.item_B::before,
-.item_C::before,
-.item_D::before {
+.article_S::before,
+.article_A::before,
+.article_B::before,
+.article_C::before,
+.article_D::before {
   content: "";
   position: absolute;
   top: 3px;
@@ -53,7 +53,7 @@
   border-radius: 7px;
 }
 /* ------------------------------------ */
-.item_img {
+.article_img {
   aspect-ratio: 1/1;
   object-fit: contain;
   width: 100%;
@@ -61,7 +61,7 @@
   border-radius: 10px;
   position: absolute;
 }
-.item_cnt {
+.article_cnt {
   position: absolute;
   bottom: 0.5rem;
   right: 0.5rem;
