--- a/src/styles/Market/Enroll/MarketEnrollItemList.module.css
+++ b/src/styles/Market/Enroll/MarketEnrollItemList.module.css
@@ -1,21 +1,22 @@
-.itemList {
+.main {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 2rem;
   overflow: hidden;
   height: 100%;
   color: #2d2d2d;
 }
-.header {
+.main_header {
   height: 2.5rem;
   display: flex;
   align-items: center;
   gap: 1rem;
 }
-.header_title {
+.main_header_title {
   font-size: 1.5rem;
 }
-.main {
+/* -------------------------------------------- */
+.section {
   position: relative;
   width: 100%;
   height: 100%;
@@ -24,21 +25,26 @@
   gap: 1rem;
   overflow: hidden;
 }
-.main_header {
+.section_wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+.section_title {
   font-weight: bold;
   font-size: 1.2rem;
 }
-.main_body {
+.section_article {
   height: 100%;
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   grid-template-rows: repeat(7, 1fr);
-  gap: 1rem;
+  gap: 0.5rem;
   overflow-y: scroll;
   scrollbar-width: none;
 }
-
-.pageList {
+/* ---------------------------------------------- */
+.section_1 {
   display: flex;
   align-items: center;
   justify-content: center;
