--- a/src/styles/Market/MarketItem.module.css
+++ b/src/styles/Market/MarketItem.module.css
@@ -1,4 +1,4 @@
-.item {
+.article {
   position: relative;
   background-color: white;
   aspect-ratio: 1/1;
@@ -8,17 +8,11 @@
   justify-content: center;
   cursor: pointer;
 }
-.item:hover {
+.article:hover {
   border: 3px solid #FF63F7;
   transition-duration: 100ms;
 }
-.item > img {
-  width: 6rem;
-  height: 6rem;
-  border-radius: 10px;
-}
-/* ---------------------------- */
-.disabled {
+.article_disabled {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -26,5 +20,10 @@
   left: 0;
   background-color: white;
   opacity: 0.7;
+  border-radius: 10px;
+}
+.article_img {
+  width: 6rem;
+  height: 6rem;
   border-radius: 10px;
 }
