--- a/src/styles/Market/MarketMain.module.css
+++ b/src/styles/Market/MarketMain.module.css
@@ -1,7 +1,7 @@
 .container {
   min-width: 68rem;
   height: 100vh;
-  padding: 2rem 4rem;
+  padding: 4rem;
   box-sizing: border-box;
   background: linear-gradient(to bottom, #ffe9e9, #ff9fb1);
   display: flex;
@@ -15,36 +15,42 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
-  padding: 2rem;
-  box-sizing: border-box;
+  gap: 2rem;
   border-radius: 10px;
   position: relative;
   z-index: 5;
 }
-/* ------------------------------------------------------------ */
-.aside {
+/* ----------------------------------------- */
+.header {
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
   gap: 1rem;
 }
-.aside_title {
-  font-size: 1.5rem;
-}
-.aside_wrapper {
+.header_aside {
   display: flex;
   align-items: center;
   gap: 1rem;
 }
-
-.main {
+.header_title {
+  font-size: 1.5rem;
+}
+.header_nav {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+/* ----------------------------------------- */
+.section {
   width: 100%;
   height: 100%;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
-.main_nav {
+.section_nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -74,16 +80,16 @@
   color: #ff7a92;
   border-bottom: 3px solid #ff7a92;
 }
-.main_items {
+/* ----------------------------------------------- */
+.article {
   height: 100%;
   overflow: scroll;
   scrollbar-width: none;
 }
-.main_items_wrapper {
+.article_section {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: repeat(6, 1fr);
   gap: 0.5rem;
-  padding-top: 1rem;
   box-sizing: border-box;
 }
