--- a/src/styles/Market/Sell/MarketMySellingItem.module.css
+++ b/src/styles/Market/Sell/MarketMySellingItem.module.css
@@ -1,15 +1,13 @@
-.main_items_item {
+.article {
   height: 3.5rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
   border-radius: 10px;
-  /* background-color: white; */
-  /* box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2); */
   position: relative;
   font-weight: 400;
 }
-.main_items_background {
+.article_background {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -18,30 +16,21 @@
   z-index: -10;
   background-color: white;
 }
-.main_items_img {
+.article_img {
   width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.main_items_img > img {
+.article_img > img {
   height: 100%;
   aspect-ratio: 1/1;
-  /* border: 1px solid gray; */
   border-radius: 10px;
-  /* background-color: lightgray; */
   object-fit: fill;
 }
-.main_items_item > p {
+.article_item {
   width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.main_items_item > div:last-child {
-  width: 100%;
-  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
