--- a/src/styles/Market/Sell/MarketMySellingList.module.css
+++ b/src/styles/Market/Sell/MarketMySellingList.module.css
@@ -1,7 +1,7 @@
 .container {
   min-width: 68rem;
   height: 100vh;
-  padding: 2rem 4rem;
+  padding: 4rem;
   box-sizing: border-box;
   background: linear-gradient(to bottom, #ffe9e9, #ff9fb1);
   display: flex;
@@ -15,44 +15,43 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
+  gap: 2rem;
   position: relative;
   z-index: 5;
-  padding: 2rem;
-  box-sizing: border-box;
 }
-/* ------------------------------------------------------------ */
-.aside {
+/* ------------------------------------- */
+.header {
   width: 100%;
   display: flex;
   gap: 1rem;
   align-items: center;
   justify-content: space-between;
 }
-.aside_wrapper {
+.header_wrapper {
   display: flex;
   align-items: center;
   gap: 1rem;
 }
-.aside_title {
+.header_title {
   font-size: 1.5rem;
 }
-.aside_filter {
+.header_filter {
   width: 6rem;
   height: 2rem;
   font-size: 1rem;
   text-align: center;
   border-radius: 5px;
 }
-
-.main {
+/* ----------------------------------- */
+.section {
   width: 100%;
   height: 100%;
   overflow: hidden;
   display: flex;
   flex-direction: column;
+  gap: 1rem;
 }
-.main_nav {
+.section_nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -64,7 +63,7 @@
   background: none;
   color: #545454;
   font-weight: bold;
-  font-size: 1.2rem;
+  font-size: 1.125rem;
   cursor: pointer;
   border-bottom: 3px solid white;
 }
@@ -82,29 +81,26 @@
   color: #ff7a92;
   border-bottom: 3px solid #ff7a92;
 }
-.main_items {
+/* ------------------------------------------- */
+.article {
   flex-grow: 1;
   height: 100%;
-  padding: 1rem 0;
-  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
-.main_items_header {
+.article_aside {
   width: 100%;
   height: 2.5rem;
-  /* background-color: white; */
   border-radius: 10px;
   box-sizing: border-box;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  /* opacity: 0.7; */
   position: relative;
   font-weight: bold;
 }
-.main_items_header_background {
+.article_aside_background {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -113,15 +109,14 @@
   z-index: -10;
   border-radius: 10px;
 }
-.main_items_header > div {
+.article_aside > p {
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   font-weight: bold;
 }
-.main_items_main {
-  padding-bottom: 1rem;
+.article_section {
   font-weight: bold;
   display: flex;
   flex-direction: column;
